# SpheroidalScattering

./: .gitignore  CMakeLists.txt
doc/: spheroidal wave functions
include/: ChargedParticleTracer.hpp  MatAlgebra.hpp  SpheroidScattering.hpp  SpheroidalInterpolator.hpp  TipEmission.hpp  Utility.hpp
include/splinter/: definitions.h
src/: main.cpp
test/: TestInterpolation.hpp  TestSpheroidalScattering.hpp  TestSpheroidalScatteringWidebandMPI.hpp  TestSpheroidalScatteringWidebandOMP.hpp  Test_Fowler_Nordheim.hpp  Tests.hpp
